--- a/app/views/spree/admin/gift_cards/index.html.erb
+++ b/app/views/spree/admin/gift_cards/index.html.erb
@@ -1,1 +1,33 @@
 <%= render partial: 'lookup_form' %>
+
+
+<h1>Recent gift-cards</h1>
+<table class="index">
+  <thead>
+  <tr>
+    <th class="align-center">Redemption Code</th>
+    <th class="align-center">Amount</th>
+    <th class="align-center">Purchased by</th>
+    <th class="align-center">Purchased at</th>
+    <th class="align-center">Redeemed by</th>
+    <th class="align-center">Redeemed at</th>
+  </tr>
+  </thead>
+  <tbody>
+  <% Spree::VirtualGiftCard.order('created_at DESC').limit(60).each do |gift_card| %>
+    <tr>
+      <td class="align-center"><%= gift_card.formatted_redemption_code %></td>
+      <td class="align-center"><%= number_to_currency(gift_card.amount) %></td>
+      <td class="align-center"><%= link_to "#{gift_card.purchaser.firstname} #{gift_card.purchaser.lastname}", edit_admin_user_path(gift_card.purchaser) %></td>
+      <td class="align-center"><%= gift_card.created_at.localtime.strftime("%F %I:%M%p") %></td>
+      <% if gift_card.redeemed? %>
+        <td class="align-center"><%= link_to "#{gift_card.redeemer.firstname} #{gift_card.redeemer.lastname}", edit_admin_user_path(gift_card.redeemer) %></td>
+        <td class="align-center"><%= gift_card.redeemed_at.localtime.strftime("%F %I:%M%p") %></td>
+      <% else %>
+        <td class="align-center"></td>
+        <td class="align-center"></td>
+      <% end %>
+    </tr>
+  <% end %>
+  </tbody>
+</table>
