--- a/app/views/spree/admin/gift_cards/_lookup_form.html.erb
+++ b/app/views/spree/admin/gift_cards/_lookup_form.html.erb
@@ -1,7 +1,5 @@
-<script async='true'>GiftCards.init()</script>
-
 <div class='gift-card-code-lookup'>
-  <%= form_for :gift_card, url: admin_gift_cards_path, html: {id: 'lookup-redemption-code'} do |f| %>
+  <%= form_for :gift_card, url: admin_virtual_gift_cards_path, method: 'GET' do |f| %>
     Redemption code: <%= f.text_field :redemption_code %><br />
     <%= f.submit 'Lookup Gift Card', class: 'lookup-gift-card-button' %>
   <% end %>
