--- a/app/views/spree/admin/users/_sub_menu.html.erb
+++ b/app/views/spree/admin/users/_sub_menu.html.erb
@@ -2,7 +2,7 @@
   <% content_for :sub_menu do %>
     <ul id="sub_nav" class="inline-menu">
       <%= tab :users %>
-      <%= tab :gift_cards, :match_path => '/users/gift_cards' %>
+      <%= tab :virtual_gift_cards, :match_path => '/users/virtual_gift_cards' %>
     </ul>
   <% end %>
 <% end %>
